--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -26,7 +26,9 @@
 }
 #center {
     height: 530px;
-    background-image: url(../img/login02.png);
+    background-image: url(../img/timg.jpg);
+    background-position:center;
+	background-size: cover;
 }
 #bottom {
     height: 80px;
